--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -3,7 +3,7 @@ $primary: #00b5ef;
 $secondary: #0873a0;
 $light: #f1f7fc;
 $light-text: #9cc7d9;
-$error: #ff2d2d;
+$error: #ffcbcb;
 
 // Grid
 $grid-cols: 12;
