--- a/src/scss/partials/_hero.scss
+++ b/src/scss/partials/_hero.scss
@@ -9,9 +9,13 @@ section.hero {
   }
 
   .hero-details {
+    display: none;
     color: $light;
     font-family: Lato, sans-serif;
     font-size: 0.75em;
     padding: 1em 0;
+    @include tablet {
+      display: block;
+    }
   }
 }
