--- a/src/scss/partials/_registration.scss
+++ b/src/scss/partials/_registration.scss
@@ -22,6 +22,15 @@
     padding-bottom: 0.8em;
   }
 
+  .row {
+    width: 300px;
+    margin: 0 auto;
+    @include tablet {
+      width: 100%;
+      margin: 0;
+    }
+  }
+
   @include tablet {
     background-color: #fff;
     border: 1px solid #ddd;
@@ -82,14 +91,14 @@
 
   &::before {
     position: absolute;
-    top: -40px;
+    top: -30px;
     left: calc(50% - 40px);
     display: block;
     width: 80px;
     height: 80px;
     background: center/60% no-repeat url('../assets/page.png') #fff;
     border-radius: 50%;
-    box-shadow: 0 3px 5px 1px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 2px 4px 1px rgba(0, 0, 0, 0.4);
     content: '';
   }
 }
